# mcpharbour

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  allurerc.mjs  entry_harbour.py  entry_service.py  index.html  pyproject.toml  runs.json
.github/workflows/: build.yml  install-matrix.yml  release.yml  test-matrix.yml
docs/: custom.css  mint.json
docs/concepts/: architecture.mdx  permissions.mdx
docs/getting-started/: installation.mdx  introduction.mdx  quickstart.mdx
docs/reference/: bridge.mdx  cli.mdx  configuration.mdx  policy-format.mdx
mcp_harbour/: config.py  gateway.py  main.py  process_manager.py  service.py  updater.py
runs/5/: index.html  summary.json
runs/5/data/history/: f4f60b91-b3ef-4b79-a281-23f41f295e5c.json
runs/5/widgets/: charts.json  nav.json  pie_chart.json  search-index.json  statistic.json  timeline.json  tree.json
runs/5/widgets/default/: nav.json  search-index.json  statistic.json  tree.json
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
tests/: README.md  TEST-PLAN.md  conftest.py  testing-framework-design.md
tests/ci/: build_report_index.py
tests/e2e/: test_e2e.py
tests/integration/: test_handshake.py  test_session.py
tests/smoke/: downstream_server.py  scenario.py
tests/unit/: test_bridge.py  test_cli.py  test_config.py  test_errors.py  test_identity.py  test_models.py  test_permissions.py  test_process_manager.py  test_updater.py
