[project]
name = "mcp-harbour"
version = "0.1.1"
description = "The port authority for your MCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "mcp>=0.1.0",
    "keyring>=24.0.0",
    "bcrypt>=4.0.0"
]

[project.scripts]
harbour = "mcp_harbour.main:app"
harbour-bridge = "mcp_harbour.bridge:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
